@@ -1565,6 +1565,17 @@ class MySQLCursorAbstract(ABC):
         """Return warnings."""
         return self._warnings
 
+    @property
+    def warning_count(self):
+        """Returns the number of warnings
+
+        This property returns the number of warnings generated by the
+        previously executed operation.
+
+        Returns an integer value.
+        """
+        return self._warning_count
+
     def fetchwarnings(self):
         """Returns Warnings."""
         return self._warnings
